radarr/deployment exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-exporter
spec:
  selector:
    matchLabels:
      app: radarr-exporter
      release: radarr-exporter
  template:
    metadata:
      labels:
        app: radarr-exporter
        release: radarr-exporter
    spec:
 
      containers:
      
      - image: ghcr.io/onedr0p/exportarr
        imagePullPolicy: Always
        name: radarr-metric-exporter
        ports:
        - containerPort: 9707
          name: metrics
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
