radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service    # < name of the service
  namespace: radarr # < namespace where place the deployment and pods
spec:
  selector:
    app: radarr # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 7878
    - name: metrics
      protocol: TCP
      port: 9707
