radarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: radarr
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.olympus.mangelschots.org`)
      kind: Rule
      services:
        - name: radarr-service
          port: 7878
  tls:
    secretName: -mangelschots-org-tls
